# ORB_SLAM3_detailed_comments

./: .gitignore  CMakeLists.txt  Dockerfile
Examples/Monocular/: mono_euroc.cc  mono_tum.cc
Examples/Monocular-Inertial/: EuRoC.yaml  mono_inertial_euroc.cc  mono_inertial_tum_vi.cc
Examples/RGB-D/: rgbd_tum.cc
Examples/ROS/: CMakeLists.txt  EuRoC.yaml
Examples/ROS/ORB_SLAM3_detailed_comments/: CMakeLists.txt
Examples/ROS/ORB_SLAM3_detailed_comments/src/: ros_mono_inertial.cc
Examples/ROS/ORB_SLAM3_detailed_comments/src/AR/: ViewerAR.cc  ros_mono_ar.cc
Examples/ROS/src/: bag901_mono_inertial.cc  bag901_stereo.cc  ros901_mono_inertial.cc  ros_mono.cc  ros_rgbd.cc  ros_stereo.cc  ros_stereo_inertial.cc
Examples/ROS/src/AR/: ViewerAR.cc  ViewerAR.h  ros_mono_ar.cc
Examples/Stereo/: stereo_euroc.cc  stereo_kitti.cc  stereo_tum_vi.cc
Examples/Stereo-Inertial/: stereo_inertial_euroc.cc
Examples_old/Monocular/: mono_euroc.cc  mono_kitti.cc  mono_tum_vi.cc
Examples_old/Monocular-Inertial/: mono_inertial_euroc.cc
Examples_old/RGB-D/: rgbd_tum.cc
Examples_old/ROS/ORB_SLAM3/: CMakeLists.txt
Examples_old/ROS/ORB_SLAM3/src/: ros_mono_inertial.cc
Examples_old/Stereo/: stereo_euroc.cc  stereo_kitti.cc  stereo_tum_vi.cc
Examples_old/Stereo-Inertial/: stereo_inertial_euroc.cc  stereo_inertial_tum_vi.cc
cmake/: 3rdparty.cmake
evaluation/: associate.py  evaluate_ate_scale.py  evaluate_ate_scale_rosbag.py
experiment/: CMakeLists.txt  KITTI360.yaml  stereo_kitti360.cc
include/: Atlas.h  Config.h  Converter.h  Frame.h  FrameDrawer.h  G2oTypes.h  ImuTypes.h  KeyFrame.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  MLPnPsolver.h  Map.h  MapDrawer.h  MapPoint.h  ORBVocabulary.h  ORBextractor.h  ORBmatcher.h  OptimizableTypes.h  Optimizer.h  SerializationUtils.h  Settings.h  Sim3Solver.h  System.h  Tracking.h  TwoViewReconstruction.h  Viewer.h  utils.h
include/CameraModels/: GeometricCamera.h  KannalaBrandt8.h  Pinhole.h
src/: Atlas.cc  Converter.cc  Frame.cc  FrameDrawer.cc  G2oTypes.cc  GeometricTools.cc  ImuTypes.cc  KeyFrame.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  MLPnPsolver.cpp  Map.cc  MapDrawer.cc  MapPoint.cc  ORBextractor.cc  ORBmatcher.cc  OptimizableTypes.cpp  Optimizer.cc  Settings.cc  Sim3Solver.cc  System.cc  Tracking.cc  TwoViewReconstruction.cc  Viewer.cc
src/CameraModels/: KannalaBrandt8.cpp
学习笔记/: IMU.md  ORB匹配器.md  ORB提取器.md  优化器.md  关键帧.md  初始化.md  回环检测线程.md  地图点.md  学习笔记.md  帧.md  建图线程.md  编译.md  跟踪线程.md
